--- a/notTidyHpInfo/html/subpages001/pages/c001/c001tab002.html
+++ b/notTidyHpInfo/html/subpages001/pages/c001/c001tab002.html
@@ -2,39 +2,74 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>カテゴリサンプル</title>
+<title>インフラ関連１</title>
 <!-- ------------------------------------------------------------------------------- -->
 <SCRIPT src="../../../../js/commonHeaderSetting.js"></SCRIPT>
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-<h1>タイトル</h1>
+最終更新日付：2016/12/20（火）
+<h1>インフラの知識をつけよう(take1)</h1>
+<!--
 <ul>
 <li>全体サイズとしては3000文字が目安
 <li>タイトルは28文字以内
 <li>キーワードプランナーを使用
 </ul>
+<img/>
 <h2>問題提起</h2>
-
-
 <h2>解決策提起</h2>
-
 <h2>解決策根拠</h2>
+<h1>画像テスト(jpeg)</h1>
+<img border="0" src="../../../../images/test.jpg" >
+ -->
 
-<h2>小見出し</h2>
-本文
+<!--===============================================================================================================-->
+<h2>ファイル共有プロトコルSMB／CIFS</h2>
+【参考】http://www.atmarkit.co.jp/ait/articles/0410/29/news103.html
+<h3>Windowsネットワークの基本アーキテクチャ</h3>
+<ul>
+<li>
+<li>
+<pre class="brush: bash;">
+</pre>
+</ul>
 
-<h2>小見出し</h2>
-本文
+<!--===============================================================================================================-->
+<h2>OAuth 2.0 の仕組みと認証方法</h2>
+【参考】https://murashun.jp/blog/20150920-01.html
+<ul>
+<li>
+<pre class="brush: bash;">
+</pre>
+</ul>
 
-<h2>小見出し</h2>
-本文
+<!--===============================================================================================================-->
+<h2>ロードバランサのDSR(Direct Server Return)方式</h2>
+<ul>
+<li>
+<pre class="brush: bash;">
+</pre>
+</ul>
+<!--===============================================================================================================-->
+<h2>サーバとネットワークの知識</h2>
+【参考】https://www.change-makers.jp/docs/softlayer-config-guide/10289
+<ul>
+<li>
+<pre class="brush: bash;">
+</pre>
+</ul>
 
+
+
+
+
+
+<!--===============================================================================================================-->
 <h2>まとめ</h2>
 結論
-
+<!--===============================================================================================================-->
 <h2>CTA</h2>
 広告とか。。。
-
 </body>
 </html>
