--- a/notTidyHpInfo/html/subpages001/pages/00_blog_sample.html
+++ b/notTidyHpInfo/html/subpages001/pages/00_blog_sample.html
@@ -8,7 +8,7 @@
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-最終更新日付：2016/11/26（土）
+最終更新日付：2016/12/20（火）
 <h1>タイトル</h1>
 <!--
 <ul>
@@ -22,10 +22,9 @@
 <h2>解決策根拠</h2>
  -->
 <h1>画像テスト(png)</h1>
-<img border="0" src="../../../images/test.png" >
+<img border="0" src="../../../../images/test.png" >
 <h1>画像テスト(jpeg)</h1>
-<img border="0" src="../../../images/test.jpg" >
-<img border="0" src="../../../../images/subpages001/c003tab000_001.png" >
+<img border="0" src="../../../../images/test.jpg" >
 
 <ul>
 <li> 前提として、CentOS6.5 の構築後の作業
