学習ネタをアップ

--- a/notTidyHpInfo/html/subpages001/pages/c001/c001tab002.html
+++ b/notTidyHpInfo/html/subpages001/pages/c001/c001tab002.html
@@ -25,6 +25,87 @@
  -->
 
 <!--===============================================================================================================-->
+<h2>未整頓</h2>
+<ul>
+<li>Virtual Network Enabler(VNE)：ISP事業者に対してインターネットサービス提供に必要となるネットワーク設備や、その他・システム・運用機能等を提供する事業者のことです。
+<li>次世代ネットワーク（NGN）
+  <ul>
+  <li>https://ja.wikipedia.org/wiki/Next_Generation_Network
+  </ul>
+<li>ONU
+  <ul>
+  <li>https://ja.wikipedia.org/wiki/%E5%85%89%E5%9B%9E%E7%B7%9A%E7%B5%82%E7%AB%AF%E8%A3%85%E7%BD%AE
+  </ul>
+<li>ブロードバンドルータ
+  <ul>
+  <li>http://www.aibsc.jp/joho/otasuke_m/basic/06/04.html
+  <li>http://e-words.jp/w/%E3%83%96%E3%83%AD%E3%83%BC%E3%83%89%E3%83%90%E3%83%B3%E3%83%89%E3%83%AB%E3%83%BC%E3%82%BF.html
+  </ul>
+<li>ホームゲートウェイルータ
+  <ul>
+  <li>
+  </ul>
+<li>ルーティング（ルータの本質的機能）
+  <ul>
+  <li>http://manabu.quu.cc/up/6/e62540m1.htm
+  <li>
+  </ul>
+<li>RFC5549の技術の導入を実現する方法とメリット
+  <ul>
+  <li>https://adtech.cyberagent.io/techblog/archives/658
+  </ul>
+<li>IP over Ethernetとは
+  <ul>
+  <li>https://www.nic.ad.jp/ja/basics/terms/ipoe.html
+  </ul>
+<li>IP over Ethernet
+  <ul>
+  <li>http://www.wdic.org/w/WDIC/IP%20over%20Ethernet
+  </ul>
+<li>IPv6
+  <ul>
+  <li>https://www.nic.ad.jp/ja/newsletter/No32/090.html
+  </ul>
+<li>bgp peer とは
+  <ul>
+  <li>http://www5e.biglobe.ne.jp/aji/30min/17.html
+  <li>http://www.infraexpert.com/study/rp5.htm
+  <li>
+  <li>
+  </ul>
+<li>プレフィックスサイズとは
+  <ul>
+  <li>http://www.wakhok.ac.jp/~kanayama/summer/05/ipv6/node9.html
+  <li>
+  </ul>
+<li>
+  <ul>
+  <li>
+  </ul>
+<li>
+  <ul>
+  <li>
+  </ul>
+<li>
+  <ul>
+  <li>
+  </ul>
+</ul>
+
+
+
+<!--===============================================================================================================-->
+<h2>トランジット・ピアリング</h2>
+【参考】https://ja.wikipedia.org/wiki/%E3%83%94%E3%82%A2%E3%83%AA%E3%83%B3%E3%82%B0
+<h3></h3>
+<ul>
+<li>Virtual Network Enabler(VNE) →
+<li>
+<pre class="brush: bash;">
+</pre>
+</ul>
+
+<!--===============================================================================================================-->
 <h2>ファイル共有プロトコルSMB／CIFS</h2>
 【参考】http://www.atmarkit.co.jp/ait/articles/0410/29/news103.html
 <h3>Windowsネットワークの基本アーキテクチャ</h3>
