--- a/notTidyHpInfo/html/subpages001/pages/c003/c003tab012.html
+++ b/notTidyHpInfo/html/subpages001/pages/c003/c003tab012.html
@@ -8,57 +8,42 @@
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-最終更新日付：2016/12/20（火）
-<h1>タイトル</h1>
-<!--
-<ul>
-<li>全体サイズとしては3000文字が目安
-<li>タイトルは28文字以内
-<li>キーワードプランナーを使用
-</ul>
-<img/>
-<h2>問題提起</h2>
-<h2>解決策提起</h2>
-<h2>解決策根拠</h2>
- -->
- <strong class="bigfont_underline">強調</strong>
-<h1>画像テスト(png)</h1>
-<img border="0" src="../../../../images/test.png" >
-<h1>画像テスト(jpeg)</h1>
-<img border="0" src="../../../../images/test.jpg" >
+最終更新日付：2016/12/26（月）
+<h1>Vagrantいじり</h1>
 
+<!--===============================================================================================================-->
+<h2>未整頓</h2>
 <ul>
-<li> 前提として、CentOS6.5 の構築後の作業
-<li> 参考はこちら
-  <ul>
-  <li>http://futurismo.biz/archives/1348
-  </ul>
-<pre class="brush: bash;">
+<li>Vagrantの基本
+<pre class="brush: xml;">
+http://qiita.com/kidach1/items/e63c1607705178aa257c
 </pre>
+<li>
+<pre class="brush: xml;">
+</pre>
+
+<li>
+<pre class="brush: xml;">
+</pre>
+
+<li>
+<pre class="brush: xml;">
+</pre>
+
+<li>
+<pre class="brush: xml;">
+</pre>
+
+<li>
+<pre class="brush: xml;">
+</pre>
+
+<li>
+<pre class="brush: xml;">
+</pre>
+
+
 </ul>
-<!-- テーブル -->
-<table class="type07">
-	<thead>
-	<tr>
-		<th scope="cols">タイトル</th>
-		<th scope="cols">内容</th>
-	</tr>
-	</thead>
-	<tbody>
-	<tr>
-		<th scope="row">項目名</th>
-		<td>内容がはいります。</td>
-	</tr>
-	<tr>
-		<th scope="row">項目名</th>
-		<td>内容がはいります。</td>
-	</tr>
-	<tr>
-		<th scope="row">項目名</th>
-		<td>内容がはいります。</td>
-	</tr>
-	</tbody>
-</table>
 
 <!--===============================================================================================================-->
 <h2>小見出し</h2>
@@ -83,6 +68,23 @@
 <pre class="brush: bash;">
 </pre>
 </ul>
+
+<!--===============================================================================================================-->
+<h2>小見出し</h2>
+<ul>
+<li>
+<pre class="brush: bash;">
+</pre>
+</ul>
+
+<!--===============================================================================================================-->
+<h2>小見出し</h2>
+<ul>
+<li>
+<pre class="brush: bash;">
+</pre>
+</ul>
+
 
 <!--===============================================================================================================-->
 <h2>まとめ</h2>
