--- a/notTidyHpInfo/html/subpages001/readme.html
+++ b/notTidyHpInfo/html/subpages001/readme.html
@@ -40,7 +40,7 @@
 <li><a href="#c001tab000" onclick="ChangeTab('c001tab000'); return false;">アーキテクチャ</a>
 <li><a href="#c001tab001" onclick="ChangeTab('c001tab001'); return false;">業務フロー</a>
 <li><a href="#c001tab002" onclick="ChangeTab('c001tab002'); return false;">インフラ勉強(take1)</a>
-<li><a href="#c001tab003" onclick="ChangeTab('c001tab003'); return false;">　</a>
+<li><a href="#c001tab003" onclick="ChangeTab('c001tab003'); return false;">セキュリティ関連(take1)</a>
 <li><a href="#c001tab004" onclick="ChangeTab('c001tab004'); return false;">　</a>
 <li><a href="#c001tab005" onclick="ChangeTab('c001tab005'); return false;">　</a>
 </ul>
@@ -65,8 +65,8 @@
 <li><a href="#c003tab008" onclick="ChangeTab('c003tab008'); return false;">CentOS7.0でJava8を確認</a>
 <li><a href="#c003tab009" onclick="ChangeTab('c003tab009'); return false;">CentOS7.0にMySQLを装備</a>
 <li><a href="#c003tab010" onclick="ChangeTab('c003tab010'); return false;">VirtualBox内のCentOS7.2にapacheとMySQLをインストールしてLaravelの開発環境を作成した</a>
-<li><a href="#c003tab011" onclick="ChangeTab('c003tab011'); return false;">　</a>
-<li><a href="#c003tab012" onclick="ChangeTab('c003tab012'); return false;">　</a>
+<li><a href="#c003tab011" onclick="ChangeTab('c003tab011'); return false;">Dockerいじり</a>
+<li><a href="#c003tab012" onclick="ChangeTab('c003tab012'); return false;">Vagrantいじり</a>
 <li><a href="#c003tab013" onclick="ChangeTab('c003tab013'); return false;">　</a>
 <li><a href="#c003tab014" onclick="ChangeTab('c003tab014'); return false;">　</a>
 <li><a href="#c003tab015" onclick="ChangeTab('c003tab015'); return false;">　</a>
@@ -199,9 +199,9 @@ function ChangeCategory(categoryname) {
 	   document.getElementById(categoryname).style.display = 'block';
 }
 //デフォルトのカテゴリを選択
-ChangeCategory('category003');
+ChangeCategory('category001');
 //デフォルトのタブを選択
-ChangeTab('c003tab010');
+ChangeTab('c001tab003');
 </script>
 <!-- ------------------------------------------------------------------------------- -->
 </body>
