--- a/notTidyHpInfo/html/subpages001/pages/c003/c003tab011.html
+++ b/notTidyHpInfo/html/subpages001/pages/c003/c003tab011.html
@@ -8,57 +8,34 @@
 <!-- ------------------------------------------------------------------------------- -->
 </head>
 <body>
-最終更新日付：2016/12/20（火）
-<h1>タイトル</h1>
-<!--
-<ul>
-<li>全体サイズとしては3000文字が目安
-<li>タイトルは28文字以内
-<li>キーワードプランナーを使用
-</ul>
-<img/>
-<h2>問題提起</h2>
-<h2>解決策提起</h2>
-<h2>解決策根拠</h2>
- -->
- <strong class="bigfont_underline">強調</strong>
-<h1>画像テスト(png)</h1>
-<img border="0" src="../../../../images/test.png" >
-<h1>画像テスト(jpeg)</h1>
-<img border="0" src="../../../../images/test.jpg" >
+最終更新日付：2016/12/26（月）
+<h1>Dockerいじり</h1>
 
+<!--===============================================================================================================-->
+<h2>未整頓</h2>
 <ul>
-<li> 前提として、CentOS6.5 の構築後の作業
-<li> 参考はこちら
-  <ul>
-  <li>http://futurismo.biz/archives/1348
-  </ul>
-<pre class="brush: bash;">
+<li>Windows10にDockerでLAMP環境を構築する
+<pre class="brush: xml;">
+http://qiita.com/kamonamban/items/e0150a2a7a4d28db10c4
 </pre>
+<li>Windows 10のコンテナーとDockerを試す
+<pre class="brush: xml;">
+http://stknohg.hatenablog.jp/entry/2016/08/05/233212
+</pre>
+<li>DockerをWindows10(Home)にインストール
+<pre class="brush: xml;">
+http://su-ho.hatenablog.com/entry/2016/06/24/011728
+ちょっとしたヒントあり
+</pre>
+<li> <strong class="bigfont_underline">【結論】Windows10 home では、「Hyper-V」が使えない → Dockerが使えない!!</strong>
+<pre class="brush: xml;">
+</pre>
+<li>
+<pre class="brush: xml;">
+</pre>
+
+
 </ul>
-<!-- テーブル -->
-<table class="type07">
-	<thead>
-	<tr>
-		<th scope="cols">タイトル</th>
-		<th scope="cols">内容</th>
-	</tr>
-	</thead>
-	<tbody>
-	<tr>
-		<th scope="row">項目名</th>
-		<td>内容がはいります。</td>
-	</tr>
-	<tr>
-		<th scope="row">項目名</th>
-		<td>内容がはいります。</td>
-	</tr>
-	<tr>
-		<th scope="row">項目名</th>
-		<td>内容がはいります。</td>
-	</tr>
-	</tbody>
-</table>
 
 <!--===============================================================================================================-->
 <h2>小見出し</h2>
@@ -83,6 +60,23 @@
 <pre class="brush: bash;">
 </pre>
 </ul>
+
+<!--===============================================================================================================-->
+<h2>小見出し</h2>
+<ul>
+<li>
+<pre class="brush: bash;">
+</pre>
+</ul>
+
+<!--===============================================================================================================-->
+<h2>小見出し</h2>
+<ul>
+<li>
+<pre class="brush: bash;">
+</pre>
+</ul>
+
 
 <!--===============================================================================================================-->
 <h2>まとめ</h2>
