--- a/notTidyHpInfo/html/subpages001/pages/c000/c000tab003.html
+++ b/notTidyHpInfo/html/subpages001/pages/c000/c000tab003.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h1>圧縮コマンドについて</h1>
+<div id="toc"></div>
 <ul>
 <li><a href="https://www53.atwiki.jp/yuagarizombie/pages/33.html#id_560e5b0f" target="_blank">
 	tar.gz 形式で圧縮する
